feat: add feature seeder and update prisma

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "include": ["src/**/*.ts"],
+  "exclude": ["prisma.config.ts", "prisma/*.ts"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
