--- a/server/package.json
+++ b/server/package.json
@@ -19,12 +19,13 @@
     "@types/lodash": "~4.17.13",
     "@types/multer": "~1.4.12",
     "@types/node": "^22.10.0",
-    "prisma": "^5.22.0",
+    "prisma": "^7.1.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
